internal/octogo/testdata/11_struct_fields.ogo
type ValidStruct struct {
	x int
	y int
	_ int // Blank identifiers can be repeated
	_ int
}

type InvalidStruct struct {
	a int
	b string
	// ERROR "duplicate field a|a redeclared"
	a bool
}

type InvalidInterface interface {
	a(i int, b int) int
	b() string
	// ERROR "duplicate field a|a redeclared"
	a() bool
}

func testStructs() {
	var inlineStruct struct {
		id   int
		name string
		// ERROR "duplicate field id|id redeclared"
		id int
	}

	_ = inlineStruct
}
